Continued with chapter 1

--- a/ch01.ipynb
+++ b/ch01.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4e95cb3a-a332-4dc0-b01e-9682b27d384a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "36d009a8-d611-461b-8f10-46f62e1e5257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Excersie 5 - Calulating statistics and verifying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f48bc1b2-ab23-4489-939f-190ef5f84ecd",
    "metadata": {},
    "outputs": [
@@ -56,7 +66,7 @@
        "(585690.0, np.float64(585690.0))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "faac9e01-8c71-4171-8406-cfc6ffd5f3a8",
    "metadata": {},
    "outputs": [
@@ -86,7 +96,7 @@
        "(589000.0, np.float64(589000.0))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "31f6edcb-7b0b-4975-93b4-96357d17ccd9",
    "metadata": {},
    "outputs": [
@@ -114,7 +124,7 @@
        "([477000.0], [477000.0])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,18 +156,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "49ea9ef9-450b-48e8-8ca9-fdfdc3a2e4d8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70664054444.44444"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sample variation with Bessel's correction (pure Python)\n",
+    "n = len(salaries)  # Number of observations in the sample\n",
+    "mean = sum(salaries) / n # Calculate the sample mean (average salary)\n",
+    "\n",
+    "sample_variance_python = (\n",
+    "sum(                           # Sum of squared deviations from the mean\n",
+    "    (x - mean) ** 2            # Squared difference between each salary and the mean\n",
+    "    for x in salaries          # Loop over each salary value in the sample\n",
+    ") / (n-1)                      # Bessels correction: Using (n - 1) instead of n avoids underestimating variability\n",
+    ")\n",
+    "\n",
+    "sample_variance_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dcf8d771-88be-4c6f-927a-948b402f2df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(70664054444.44444)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sample variation with Bessel's correction (Pandas)\n",
+    "\n",
+    "sample_variance_pandas = salary_series.var()\n",
+    "# series.var() uses ddof=1 (Bessel) as default \n",
+    "sample_variance_pandas \n",
+    "\n",
+    "# Both the Python and Pandas results show that:\n",
+    "# The sample variance is approximately 70,664,054,444 squared monetary units,\n",
+    "# which quantifies the spread of the data around the mean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a18cc2a4-82dd-4900-b1f1-e6d44426c654",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265827.11382484"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sample standard deviation with Bessel's correction (pure Python)\n",
+    "\n",
+    "import math  # Import math library to access the square root function\n",
+    "\n",
+    "n = len(salaries) \n",
+    "mean = sum(salaries) / n  \n",
+    "\n",
+    "# Calculate the sample standard deviation step by step:\n",
+    "sample_std_python = math.sqrt(  # Take the square root to return to the original unit (SEK)\n",
+    "    sum(                         # Sum of squared deviations from the mean\n",
+    "        (x - mean) ** 2          # Squared difference between each salary and the mean\n",
+    "        for x in salaries        # Loop over each salary value in the sample\n",
+    "    ) / (n - 1)                  # Divide by (n - 1) to apply Bessel's correction\n",
+    ")\n",
+    "\n",
+    "sample_std_python  # Typical deviation from the mean salary (in monetary units)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "26c87651-ed23-4896-9a60-dd2fb276b487",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(265827.11382484)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sample standard deviation with Bessel's correction (Pandas)\n",
+    "\n",
+    "sample_std_pandas = salary_series.std()\n",
+    "sample_std_pandas\n",
+    "\n",
+    "# Both the Python and Pandas results show that:\n",
+    "# A typical salary deviates from the average by approximately 266,000 monetary units."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4996584d-39db-4508-8949-c1413820937b",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Excersie 6 - Calculating more statistics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "55d61f83-c942-468e-8b57-d181ff49a191",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "995000.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The range represents the total spread of the data and shows the difference\n",
+    "# between the highest and lowest salary values in the sample.\n",
+    "\n",
+    "# Range with Python\n",
+    "\n",
+    "min_salary = min(salaries) # Smallest value in the sample\n",
+    "max_salary = max(salaries) # Largest value in the sample\n",
+    "\n",
+    "range_python = max_salary - min_salary # Difference between max and min \n",
+    "range_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fc10adac-6c93-4b50-b09f-3d8741273c83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(995000.0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Range with Pandas\n",
+    "\n",
+    "range_pandas = salary_series.max() - salary_series.min()\n",
+    "range_pandas\n",
+    "\n",
+    "# Both results show that the range is 995,000 monetary units. \n",
+    "# Note: The range is easy to compute but is highly sensitive to extreme values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e19a923e-9dc6-4587-9031-8b6706fca3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45386998894439035"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The coefficient of variation shows that the standard deviation is\n",
+    "# approximately 45% of the mean, indicating the relative variability of salaries in the sample.\n",
+    "\n",
+    "# Coefficient of variation with Python\n",
+    "\n",
+    "mean = sum(salaries) / len(salaries) # Sample mean\n",
+    "sample_std = sample_std_python       # Sample standard deviation (with Bessel's correction)\n",
+    "\n",
+    "cv_python = sample_std / mean        # Coefficient of variation\n",
+    "cv_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02fc2a6c-4a13-4214-bf4f-7dc792205733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(45.38699889443903)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Coefficient of variation with Pandas\n",
+    "\n",
+    "# The CV is calculated by dividing the sample standard deviation by the sample mean\n",
+    "cv_pandas = salary_series.std() / salary_series.mean() \n",
+    "\n",
+    "cv_pandas_percent = cv_pandas * 100     # Express the coefficient of variation as a percentage\n",
+    "cv_pandas_percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2b28df17-7670-4f8d-91f0-cebeeda5e131",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "420000.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The interquartile range represents the spread of the middle 50% of the data,\n",
+    "# showing how dispersed the typical salary values are while ignoring extreme values.\n",
+    "\n",
+    "# Interquartile range with Python\n",
+    "\n",
+    "sorted_salaries = sorted(salaries) # Sort the data in ascending order (required for quartiles)\n",
+    "n = len(sorted_salaries)           # Number of observations in the sample\n",
+    "\n",
+    "# Calculate the first and third quartiles using index positions\n",
+    "q1 = sorted_salaries[n // 4]      # 25th percentile (first quartile)\n",
+    "q3 = sorted_salaries[3 * n // 4]  # 75th percentile (third quartile)\n",
+    "\n",
+    "iqr_python = q3 - q1              # Interquartile range\n",
+    "iqr_python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "06aeb4f2-031d-4bf9-821f-1b463f3fac7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(413250.0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Interquartile range with Pandas\n",
+    "\n",
+    "q1_pandas = salary_series.quantile(0.25)  # First quartile (25th percentile)\n",
+    "q3_pandas = salary_series.quantile(0.75)  # Third quartile (75th percentile)\n",
+    "\n",
+    "iqr_pandas = q3_pandas - q1_pandas        # Interquartile range\n",
+    "iqr_pandas\n",
+    "\n",
+    "# Explanation:\n",
+    "# The Python and Pandas IQR results are close but not exactly the same.\n",
+    "# This difference occurs because Pandas computes quantiles using interpolation,\n",
+    "# while the pure Python approach selects values based on index positions.\n",
+    "# Both methods are valid and illustrate different ways of estimating quartiles.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2b1bb9-3009-4e94-b2a9-fc180b296727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note:\n",
+    "# Pandas uses the term \"quantile\" instead of \"quartile\" because quantiles\n",
+    "# are a general concept that represent any percentile of the data, \n",
+    "# this supports a more general and flexible approach.\n",
+    "# Quartiles are simply specific quantiles corresponding to the 25th, 50th, and 75th percentiles.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1e89e986-a666-4dcb-8ca2-46b8b1ce3709",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34146341463414637"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The quartile coefficient of dispersion measures the relative spread\n",
+    "# of the middle 50% of the data, providing a robust indicator of variability\n",
+    "# that is less sensitive to extreme values.\n",
+    "\n",
+    "# Quartile coefficient of dispersion with Python\n",
+    "\n",
+    "sorted_salaries = sorted(salaries)\n",
+    "n = len (sorted_salaries)\n",
+    "\n",
+    "q1 = sorted_salaries[n // 4]          # First quartile (25th percentile)\n",
+    "q3 = sorted_salaries[3 * n // 4]      # Third quartile (75th percentile)\n",
+    "\n",
+    "quartile_dispersion_python = (q3 - q1) / (q3 + q1)\n",
+    "\n",
+    "quartile_dispersion_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ce2ef9eb-95c2-40b9-a392-e8af896f4af7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.338660110633067)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Quartile coefficient of dispersion (Pandas)\n",
+    "\n",
+    "q1_pandas = salary_series.quantile(0.25)\n",
+    "q3_pandas = salary_series.quantile(0.75)\n",
+    "\n",
+    "quartile_dispersion_pandas = (q3_pandas - q1_pandas) / (q3_pandas + q1_pandas)\n",
+    "\n",
+    "quartile_dispersion_pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a41140f-dc26-4579-89a6-9e0915e417a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note:\n",
+    "# Both results are very close because the quartile coefficient\n",
+    "# of dispersion is a relative measure. Small differences in Q1 and Q3 tend to\n",
+    "# cancel out when both are used in the numerator and denominator.\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (hands-on-pandas)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "hands-on-pandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
