Final excersises chapter 1

--- a/ch01.ipynb
+++ b/ch01.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "36d009a8-d611-461b-8f10-46f62e1e5257",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f48bc1b2-ab23-4489-939f-190ef5f84ecd",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "(585690.0, np.float64(585690.0))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "faac9e01-8c71-4171-8406-cfc6ffd5f3a8",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "(589000.0, np.float64(589000.0))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "31f6edcb-7b0b-4975-93b4-96357d17ccd9",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "([477000.0], [477000.0])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "49ea9ef9-450b-48e8-8ca9-fdfdc3a2e4d8",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "70664054444.44444"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dcf8d771-88be-4c6f-927a-948b402f2df0",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "np.float64(70664054444.44444)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a18cc2a4-82dd-4900-b1f1-e6d44426c654",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "265827.11382484"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "26c87651-ed23-4896-9a60-dd2fb276b487",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "np.float64(265827.11382484)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4996584d-39db-4508-8949-c1413820937b",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "02fc2a6c-4a13-4214-bf4f-7dc792205733",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "np.float64(45.38699889443903)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "2b28df17-7670-4f8d-91f0-cebeeda5e131",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "420000.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "06aeb4f2-031d-4bf9-821f-1b463f3fac7c",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "np.float64(413250.0)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5d2b1bb9-3009-4e94-b2a9-fc180b296727",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "1e89e986-a666-4dcb-8ca2-46b8b1ce3709",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "0.34146341463414637"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "ce2ef9eb-95c2-40b9-a392-e8af896f4af7",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "np.float64(0.338660110633067)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3a41140f-dc26-4579-89a6-9e0915e417a8",
    "metadata": {},
    "outputs": [],
@@ -558,6 +558,188 @@
     "# of dispersion is a relative measure. Small differences in Q1 and Q3 tend to\n",
     "# cancel out when both are used in the numerator and denominator.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b0afcfde-8c81-4bf7-bf1b-571665040b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Excersie 7 - Scaling data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d09216ab-8b6f-4c62-bb93-b803d0d0574d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.8472361809045226,\n",
+       " 0.7608040201005025,\n",
+       " 0.4221105527638191,\n",
+       " 0.2592964824120603,\n",
+       " 0.5125628140703518]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Min-max scaling rescales the data to a 0–1 range,\n",
+    "# preserving relative differences while normalizing the scale.\n",
+    "\n",
+    "# Min-Max Scaling (Python)\n",
+    "\n",
+    "min_salary = min(salaries)\n",
+    "max_salary = max(salaries)\n",
+    "\n",
+    "min_max_scaled = [ \n",
+    "    (x-min_salary) / (max_salary - min_salary)\n",
+    "    for x in salaries\n",
+    "]\n",
+    "\n",
+    "min_max_scaled[:5] # Show first 5 values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a3a45fbe-a917-40b4-a185-c9268b38598e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.847236\n",
+       "1    0.760804\n",
+       "2    0.422111\n",
+       "3    0.259296\n",
+       "4    0.512563\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Min-Max Scaling (Pandas)\n",
+    "\n",
+    "min_max_scaled_series = (salary_series - salary_series.min())/ (salary_series.max() - salary_series.min())\n",
+    "\n",
+    "min_max_scaled_series.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b22c834b-a717-4a8e-8970-95615081b0b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After scaling, the minimum value becomes 0 and the maximum becomes 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d5c970ab-1580-434c-b76c-f573d6ae3a9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9717217942267801,\n",
+       " 0.6482032533127501,\n",
+       " -0.6195380058503674,\n",
+       " -1.228956652688424,\n",
+       " -0.28097209094033604]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standardizing (Python)\n",
+    "\n",
+    "mean = sum(salaries) / len(salaries) # Sample mean\n",
+    "std = sample_std_python              # Sample standard deviation (Bessel)\n",
+    "\n",
+    "standardized = [\n",
+    "    (x - mean) / std\n",
+    "    for x in salaries\n",
+    "]\n",
+    "\n",
+    "standardized[:5] # Show first 5 values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c30ae3ec-7c75-4ee4-a13c-3a8d76071a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.971722\n",
+       "1    0.648203\n",
+       "2   -0.619538\n",
+       "3   -1.228957\n",
+       "4   -0.280972\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standardizing (Pandas)\n",
+    "\n",
+    "standardized_series = (salary_series - salary_series.mean()) / salary_series.std()\n",
+    "standardized_series.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "903408d4-1d25-4b9f-8b36-a8b27309626e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "statistics.stdev(standardized)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "580e64f3-219a-465c-afdb-8a0a456ab59f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
